--- a/Sources/MFTextPicker/Resources/Views/MFTextPickerView.xib
+++ b/Sources/MFTextPicker/Resources/Views/MFTextPickerView.xib
@@ -14,7 +14,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MFTextPickerView" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MFTextPickerView" customModule="MFTextPicker">
             <rect key="frame" x="0.0" y="0.0" width="350" height="343"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
